--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
     	
 	<dependencies>
+	<!-- 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		-->	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -32,29 +38,7 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-messaging</artifactId>
 		</dependency>
-<!--
-<dependency>
-    <groupId>org.springframework.data</groupId>
-    <artifactId>spring-data-commons</artifactId>
-    <version>2.5.3</version>
-</dependency>
--->
-		<!-- Start DynamoDB -->
-		<!-- 
-	    <dependency>
-	        <groupId>com.amazonaws</groupId>
-	        <artifactId>aws-java-sdk-dynamodb</artifactId>
-	        <version>1.12.34</version>
-	    </dependency>
-	    
-
-	    <dependency>
-	        <groupId>io.github.boostchicken</groupId>
-	        <artifactId>spring-data-dynamodb</artifactId>
-	        <version>5.2.1</version>
-	    </dependency>
-	    -->
-    	<!-- End DynamoDB -->
+		
 	   <dependency>
 	       <groupId>org.springframework.boot</groupId>
 	       <artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -68,15 +52,12 @@
 		    <version>2.4.0</version>
 		</dependency>
 
-    	
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-		
 		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>2.5</version>
 		</dependency>
-		
 		
 <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
 
